# braking_system

behavior_planner/: CMakeLists.txt  package.xml
behavior_planner/include/behavior_planner/: behaviorPlanner.hpp
behavior_planner/src/: behaviorPlanner.cpp
ctrl_long_emergency/include/ctrl_long_emergency/: ctrlLongEmergency.hpp
ctrl_long_emergency/src/: ctrlLongEmergency.cpp
doc/: Automated Emergency Brake.pptx
examples/c++/basic_concepts/: CMakeLists.txt  package.xml
examples/c++/basic_concepts/config/: params.yaml
examples/c++/basic_concepts/include/basic_concepts/: publisherDemo.hpp  subscriberDemo.hpp
examples/c++/basic_concepts/launch/: pubsubDemo.launch.py  pubsubMultiDemo.launch.py
examples/c++/basic_concepts/src/: publisherDemo.cpp  subscriberDemo.cpp
examples/c++/velocity_estimator/: CMakeLists.txt  package.xml
examples/c++/velocity_estimator/include/velocity_estimator/: posePublisher.hpp  velocityEstimator.hpp
examples/c++/velocity_estimator/launch/: velocityEstimatorDemo.launch.py
examples/c++/velocity_estimator/src/: posePublisher.cpp  velocityEstimator.cpp
plan_long_emergency/: CMakeLists.txt  package.xml
plan_long_emergency/config/: config.yaml
plan_long_emergency/include/plan_long_emergency/: motionHandler.hpp
plan_long_emergency/include/plan_motion_planning/: motionHandler.hpp
plan_long_emergency/launch/: motion_planning.launch.py
plan_long_emergency/src/: motionHandler.cpp
