<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>behavior_planner</name>
  <version>0.0.0</version>
  <description>Demonstrating a node approximating velocity from displacement (rclcpp)</description>
  <maintainer email="asd@asd.com">Balics-Peti</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>crp_msgs</depend>
  <depend>tier4_planning_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
